# Covenant_Pipeline

./: .dockerignore  .env.docker.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Docker_Documentation.md  PROJECT_DOCUMENTATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: mirror-docs.mdc
.github/workflows/: build-push-poc.yml  mirror-check.yml
docs/: Covenant_Problem_and_Motivation.md
docs/application/: Pipeline_Invariants.md  README.md
docs/platform-engineering/: PE_Infrastructure_Invariants.md  PE_Invariant_Suite.md  PE_Roadmap_1.md  PE_Roadmap_M1.md  PE_Roadmap_M2.md  Platform Engineering Roadmap.md  README.md
infra/terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/bootstrap/: backend.tf  main.tf  (+3 more)
scripts/: grade_against_ledger.py  validate_doc_toc.py
tests/: conftest.py  test_grade_against_ledger.py  test_review_ledger.py
tests/fixtures/: README.md  build_synthetic_pdf.py
tests/invariants/: helpers.py  test_chunker_coverage_audit.py  test_chunker_partition.py  test_config_totality.py  test_container_parity.py  test_glossary_acyclic.py  test_metamorphic_stability.py  test_phase_composition.py  test_provenance_grounding.py  test_router_rule_dispatch.py  test_staging_parity.py
tests/mutation/: README.md  run_baseline.py  run_property_drill.py
tests/terraform/: test_evidence_manifest.py  test_plan_semantics.py  test_s3files_contract.py  test_topology_completeness.py
viewer/backend/: Dockerfile  main.py
viewer/frontend/: Dockerfile  nginx.conf
(+41 files in other folders)
